--- a/app/globals.css
+++ b/app/globals.css
@@ -1,6 +1,13 @@
 @import "tailwindcss";
 @import "tw-animate-css";
 
+@font-face {
+  font-family: 'Mainlux';
+  src: url('/fonts/Mainlux-Light.otf') format('opentype');
+  font-weight: 300;
+  font-style: normal;
+}
+
 @custom-variant dark (&:is(.dark *));
 
 *{
